--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material mkdocs-tags-plugin pymdown-extensions
+          pip install mkdocs mkdocs-material pymdown-extensions
 
       - name: Build and deploy
         run: mkdocs gh-deploy --force
