--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "mkdocs>=1.6.1",
     "mkdocs-bootswatch>=1.1",
     "mkdocs-material>=9.7.1",
+    "mkdocs-awesome-pages-plugin>=2.9.0",
+    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
 ]
