--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material pymdown-extensions
+          pip install \
+            mkdocs \
+            mkdocs-material \
+            pymdown-extensions \
+            mkdocs-awesome-pages-plugin \
+            mkdocs-tags-plugin \
+            mkdocs-git-revision-date-localized-plugin
 
       - name: Build and deploy
         run: mkdocs gh-deploy --force
